cargo-features = ["edition2024"]

[package]
name = "turtle-van"
version = "1.0.0"
edition = "2024"

[dependencies.symphonia]
version = "0.5.3"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies]
serenity = { version = "0.12.2", features = ["framework", "standard_framework", "client"] }
songbird = { version = "0.4.3", features = ["builtin-queue"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
poise = "0.6.1"
reqwest = "0.11.27"